@startuml
'https://plantuml.com/class-diagram

' --- GERAL SETTINGS ---
skinparam monochrome true
skinparam shadowing true
skinparam linetype polyline
skinparam classAttributeIconSize 0
hide empty methods
hide circles

' --- DOMAIN MODEL - INFRAESTRUTURA FÍSICA ---

    class RailwayNetwork {
        name
    }
    class RailwayLine {
        lineId
        name
    }
    class LineSegment {
        segmentId
        gauge
        isElectrified
        length_km
        maxSpeed_kmh
        maxWeight_kg_m
        trackType
        startFacilityId : int
        endFacilityId : int
    }
    class Station {
        stationId
        name
        type
        latitude
        longitude
        hasWarehouse
        hasRefrigerated
    }

    class Track {
        trackNumber (1-99)
    }

    abstract class Facility {
        name
        facilityId : int
    }
    class FreightYard {
        typeOfCargo
    }
    class Terminal {
        type
    }
    class Siding {
        purpose
    }
    abstract class Building {}
    class RefrigeratedArea {}
    class GrainSilo {}

    Facility <|-- Station
    Facility <|-- FreightYard
    Facility <|-- Terminal
    Facility <|-- Siding

    Building <|-- RefrigeratedArea
    Building <|-- GrainSilo

    RailwayNetwork "1" -- "1..*" RailwayLine : "is composed of"
    RailwayLine "1" -- "1..*" LineSegment : "is composed of"
    RailwayNetwork "1" -- "2..*" Station : connects >

    Station "1" -- "0..*" RefrigeratedArea : "can have"
    Station "1" -- "0..*" GrainSilo : "can have"
    Station "1" -- "1..99" Track : has >

    ' --- AGENTES E EQUIPAMENTO ---

    class TrainOperator {
        id
        name
    }
    class LineOwner {
        id
        name
    }
    abstract class RollingStock {
        stockId
        make
        model
        yearOfService
        gauge
        length_m
        tareWeight_kg
    }
    class Locomotive {
        locomotiveType
        power_kw
        acceleration
        maxTotalWeight_kg
        fuelCapacity_L (diesel)
        voltage_V (electric)
        frequency_Hz (electric)
    }
    class Wagon {
        wagonType
        payloadCapacity_kg
        volumeCapacity_m3
        isRefrigerated
        maxPressure_bar (for tank)
        containerSupported
    }

    RollingStock <|-- Locomotive
    RollingStock <|-- Wagon
    TrainOperator "1" -- "0..*" RollingStock : owns
    LineOwner "1" -- "0..*" RailwayLine : owns

    ' --- OPERAÇÃO E LOGÍSTICA ---

    class Freight {
        freightId
        status
    }

    class PlannedRoute {
        routeId
        name
        totalDistance
    }

    class RouteStop {
        sequenceNumber
        isStop (Y/N)
    }

    class TrainTrip {
        journeyId
        startDateTime
        status
    }

    class TrainEvent {
        timestamp
        eventType (arrival, departure)
    }

    TrainTrip "1" -- "1" PlannedRoute : follows >
    TrainTrip "1" -- "1..*" TrainEvent : records >

    ' --- ARMAZÉM E STOCK ---

    class Warehouse extends Building {
        warehouseId
        name
    }
    class Aisle {
        aisleId
    }
    class Bay {
        bayId
        capacityBoxes
    }
    class Box {
        boxId
        sku
        qtyAvailable
        expiryDate
        receivedAt
        aisle : int
        bay : int
    }
    class Item {
        sku
        name
        category
        unitWeight
    }
    class CustomerOrder {
        orderId
        priority
        dueDate
    }
    class OrderLine {
        lineNo
        requestedQty
    }
    class Return {
        returnId
        reason
        timestamp
        isRestockable()
    }
    class Quarantine {
        stack<Return>
        LIFO_processing()
    }

    Warehouse "1" -- "1..*" Aisle : has >
    Aisle "1" -- "1..*" Bay : has >
    Bay "1" -- "0..*" Box : stores >
    Box "*" -- "1" Item : contains >
    CustomerOrder "1" -- "1..*" OrderLine : "is composed of"
    OrderLine "*" -- "1" Item : requests >
    Return "*" -- "1" Item : concerns >
    Quarantine "1" -- "0..*" Return : holds >

' --- RELACIONAMENTOS GLOBAIS ---

Station "1" -- "0..*" Warehouse : "can have"

RouteStop "1" -- "1" Station : "is at"
RouteStop "1" -- "1" LineSegment : "is reached via"
TrainEvent "1" -- "1" Station : "occurs at"

TrainTrip "1" -- "1..*" Locomotive : "is pulled by"
Freight "1" -- "1..*" Wagon : "is composed of"

@enduml